Fixed todo text overflow and added tooltip on hover for overflow text

--- a/src/components/todo/todo.styles.scss
+++ b/src/components/todo/todo.styles.scss
@@ -11,6 +11,9 @@
 	}
 
 	.todo-item {
+		overflow: hidden;
+		text-overflow: ellipsis;
+
 		&.edit-input {
 			background-color: #fff;
 		}
